<resources>
    <string name="app_name">Zombie Slayer</string>
    <string name="start_game">Start</string>
    <string name="load_game">Load</string>
    <string name="settings">Settings</string>
    <string name="background_color">Background Color</string>
    <string name="player_color">Player Color</string>
    <string name="store">Store</string>
    <string name="social">Social</string>
    <string name="characters">Characters</string>
    <string name="loot_box">Loot Box</string>
    <string name="sign_in">Sign In</string>
    <string name="money">$</string>
    <string name="weapons">Weapons</string>
    <string name="skins">Skins</string>
    <string name="misc">misc</string>
    <string name="points">Points</string>
    <string name="health">Health</string>
    <string name="power">Power</string>
    <string name="music">Music</string>
    <string name="sound_effects">Sound Effects</string>
    <string name="language">Language</string>
    <string name="retry">Play Again</string>
    <string name="home">Main Menu</string>
    <string name="back">Back</string>
    <string name="Load">Load</string>
    <string name="Save">Save</string>
    <string name="SignOut">Sign Out</string>
    <string name="Account">Account</string>
    <string name="ChooseLanguage">Choose Language</string>
    <string-array name="Languages">
        <item>@string/ChooseLanguage</item>
        <item>English</item>
        <item>Español</item>
        <item>عربى</item>
        <item>русский</item>
        <item>Français</item>
    </string-array>

</resources>

