<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    tools:context="com.zombie.menu.Views.Store">

    <Button
        android:id="@+id/btnBack"
        android:layout_width="120dp"
        android:layout_height="55dp"
        android:background="@android:color/holo_green_dark"
        android:text="@string/back"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        />
    <Button
        android:id="@+id/btnWeapon"
        android:layout_width="150dp"
        android:layout_height="55dp"
        android:background="@android:color/holo_green_dark"
        android:layout_marginTop="90dp"
        android:layout_marginStart="40dp"
        android:text="@string/weapons"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        />
    <Button
        android:id="@+id/btnSkin"
        android:layout_width="150dp"
        android:layout_height="55dp"
        android:layout_alignBottom="@id/btnWeapon"
        android:layout_marginStart="192dp"
        android:background="@android:color/holo_green_dark"
        android:text="@string/skins"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        />
    <Button
        android:id="@+id/btnMisc"
        android:layout_width="200dp"
        android:layout_height="55dp"
        android:layout_marginStart="344dp"
        android:layout_alignBottom="@id/btnSkin"
        android:background="@android:color/holo_green_dark"
        android:text="@string/misc"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        />
    <TextView
        android:id="@+id/txtViewMoney"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:background="@android:color/holo_green_dark"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="50dp"
        android:text="@string/money"
        android:textColor="@android:color/black"
        android:gravity="center"

        android:textSize="12sp"
        />

</RelativeLayout>
