<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sewer"
    tools:context="com.zombie.menu.Views.GoogleSignInApi">

    <Button
        android:id="@+id/btnBack"
        android:layout_width="120dp"
        android:layout_height="55dp"
        android:background="@android:color/holo_green_dark"
        android:text="@string/back"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:onClick="buttonClicked"
        />
    <Button
        android:id="@+id/btnSignOut"
        android:layout_width="150dp"
        android:layout_height="65dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="250dp"
        android:background="@android:color/darker_gray"
        android:text="@string/SignOut"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:onClick="buttonClicked"
        android:visibility="invisible"
        />
    <Button
        android:id="@+id/btnSignIn"
        android:layout_width="150dp"
        android:layout_height="65dp"
        android:layout_centerInParent="true"
        android:background="@android:color/darker_gray"
        android:text="@string/sign_in"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:onClick="buttonClicked"
        />
    <TextView
        android:id="@+id/text_view_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/image_view_photo"
        android:layout_alignStart="@id/image_view_photo"
        android:layout_marginStart="220dp"
        android:textSize="20sp"
        android:textColor="@android:color/white"
        android:visibility="invisible"
        android:text="TextView" />
    <TextView
        android:id="@+id/text_view_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/text_view_email"
        android:layout_alignLeft="@id/text_view_email"
        android:layout_marginTop="50dp"
        android:textSize="20sp"
        android:textColor="@android:color/white"
        android:visibility="invisible"
        android:text="TextView" />
    <TextView
        android:id="@+id/text_view_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/text_view_name"
        android:layout_alignLeft="@id/text_view_name"
        android:layout_marginTop="50dp"
        android:visibility="invisible"
        android:textSize="20sp"
        android:textColor="@android:color/white"
        android:text="TextView" />

    <ImageView
        android:id="@+id/image_view_photo"
        android:layout_width="150dp"
        android:layout_height="130dp"
        android:layout_marginStart="180dp"
        android:layout_marginTop="60dp"
        android:visibility="invisible" />
</RelativeLayout>